--- a/cosmosLibrary/angular.json
+++ b/cosmosLibrary/angular.json
@@ -29,8 +29,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/font-awesome/scss/font-awesome.scss",
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -96,8 +95,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/font-awesome/scss/font-awesome.scss",
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
               "src/styles.scss"
             ],
             "scripts": []
