--- a/firstProject/src/main/resources/application.properties
+++ b/firstProject/src/main/resources/application.properties
@@ -12,7 +12,8 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.show_sql=true
 
 
-logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 # Estrategia de nombrado
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.output.ansi.enabled=ALWAYS
